# MiningConvexPolygonPatterns

./: README.md  test.sh
convexHullCGALMinerCode/: .gitignore  CMakeLists.txt  Dataset.cpp  Makefile  PolytopBottomUpMiner.cpp  PolytopBottomUpMiner.h  PolytopNaiveBottomUpMiner.cpp  PolytopNaiveBottomUpMiner.h  PolytopTopDownMiner.cpp  PolytopTopDownMiner.h  README.md  Utils.cpp  Utils.h  compile.sh  convexHullCGALMiner.py  main.cpp
data/foursquare/: helsinki.csv  lyon.csv  prague.csv  stlouis.csv
data/higherDimension/: AP.csv  iris.csv
data/irisSLSW/: irisSLSW-10.csv  irisSLSW-100.csv  irisSLSW-110.csv  irisSLSW-120.csv  irisSLSW-130.csv  irisSLSW-140.csv  irisSLSW-150.csv  irisSLSW-20.csv  irisSLSW-30.csv  irisSLSW-40.csv  irisSLSW-50.csv  irisSLSW-60.csv  irisSLSW-70.csv  irisSLSW-80.csv  irisSLSW-90.csv
data/test/: test.csv  test2.csv
numericalPatternMiner/: .project  README.md  pom.xml
numericalPatternMiner/src/main/java/com/mdi/numericalPattern/: Main.java
numericalPatternMiner/src/main/java/com/mdi/numericalPattern/hyperrectangles/: HyperrectanglesAlgorithm.java  MinIntChange.java  MinIntChangeIndex.java
numericalPatternMiner/src/main/java/com/mdi/numericalPattern/hyperrectangles/utils/: Measure.java
numericalPatternMiner/src/main/java/com/mdi/numericalPattern/polygons/: PolygonsAlgorithm.java
numericalPatternMiner/src/main/java/com/mdi/numericalPattern/polygons/constrained/: DelaunayEnum.java  ExtCbo.java  (+2 more)
numericalPatternMiner/src/main/java/com/mdi/numericalPattern/utils/: NumericalData.java  NumericalDataExact.java  NumericalDataReader.java
(+9 files in other folders)
